--- a/about_me.html
+++ b/about_me.html
@@ -151,19 +151,23 @@
     <main class="about_me">
         <div class="container-fluid">
             <div class="row show-large">
-                <div class="offset-1 col-4 info">
-                    <div class="d-flex flex-column copy">
-                        <p>Hi there again. My name is <u class="under">Ricardo Barroso</u> and I'm from Lisbon, Portugal. More than being
-                             a musician, designer, or even copywriter, I am <u class="under">passionate about communication</u> 
-                             in any shape and form.</p>
+                <div class="offset-1 col-4 info too-much-text">
+                    <div class="copy">
+                        <p>Hi there again. My name is <u class="under">Ricardo Barroso</u> and I'm a musician turned UX/UI and Graphic Designer from Lisbon, Portugal. 
+                            More than that, however, I am <u class="under">passionate about communication</u> in any shape and form.</p>
                         <p>Having studied subjects ranging from Communication Sciences to Electronic Music or 
                             Web Design, I am always on the lookout for <u class="under">interesting and challenging projects</u> 
                             that allow me to explore new approaches and acquire new skills.
                         </p>
+                        <p>Besides currently working as a freelance designer, I'm also part of <a class="no-style ajuste" target="_blank" 
+                            href="https://www.instagram.com/bue_cliche/"><u class="under">bué clichê</u><img class="h-link" src="images/hyperlink.svg"></a>, a creative design duo with fellow designer and friend André Amado. 
+                            If you're curious about my musical incursions, you might also want to check my personal
+                            project, <a class="no-style ajuste" target="_blank" href="https://bonanca.bandcamp.com/"><u class="under">bonança</u><img class="h-link" src="images/hyperlink.svg"></a>.
+                        </p>
                         <p>Let's work together.
                         </p>
                         <div>
-                            <a class="button-skin" href="contact_me.html"><u class="under">Contact me</u></a>
+                            <a class="button-skin" href="contact_me.html"><u class="under">Contact me </u><div class="arrow-link">></div></a>
                         </div>
                     </div>
                 </div>
@@ -175,17 +179,21 @@
             <div class="row show-small">
                 <div class="offset-1 col-10 offset-md-2 col-md-8 d-flex flex-column priority info copy">
                     <div class="d-flex flex-column">
-                        <p>Hi there again. My name is <u class="under">Ricardo Barroso</u> and I'm from Lisbon, Portugal. More than being
-                             a musician, designer, or even copywriter, I am <u class="under">passionate about communication</u> 
-                             in any shape and form.</p>
+                        <p>Hi there again. My name is <u class="under">Ricardo Barroso</u> and I'm a musician turned UX/UI and Graphic Designer from Lisbon, Portugal. 
+                            More than that, however, I am <u class="under">passionate about communication</u> in any shape and form.</p>
                         <p>Having studied subjects ranging from Communication Sciences to Electronic Music or 
                             Web Design, I am always on the lookout for <u class="under">interesting and challenging projects</u> 
                             that allow me to explore new approaches and acquire new skills.
                         </p>
+                        <p>Besides currently working as a freelance designer, I'm also part of <a class="no-style ajuste" target="_blank" 
+                            href="https://www.instagram.com/bue_cliche/"><u class="under">bué clichê</u><img class="h-link" src="images/hyperlink.svg"></a>, a creative design duo with fellow designer and friend André Amado. 
+                            If you're curious about my musical incursions, you might also want to check my personal
+                            project, <a class="no-style ajuste" target="_blank" href="https://bonanca.bandcamp.com/"><u class="under">bonança</u><img class="h-link" src="images/hyperlink.svg"></a>.
+                        </p>
                         <p>Let's work together.
                         </p>
                         <div>
-                            <a class="button-skin" href="contact_me.html"><u class="under">Contact me</u></a>
+                            <a class="button-skin" href="contact_me.html"><u class="under">Contact me </u><div class="arrow-link">></div></a>
                         </div>
                     </div>
                 </div>
@@ -212,7 +220,7 @@
                     <a class="no-style ajuste" target="_blank" href="https://www.instagram.com/bonanca.rgb/">Instagram</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center borders">
-                    <a class="no-style ajuste" target="_blank" href="https://bonanca.bandcamp.com/">Bandcamp</a>
+                    <a class="no-style ajuste" target="_blank" href="https://www.linkedin.com/in/ricardo-barroso-312aa0250/">LinkedIn</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center">
                     <a class="no-style ajuste" target="_blank" href="https://www.behance.net/ricardobarroso3">Behance</a>
