--- a/index.html
+++ b/index.html
@@ -159,13 +159,13 @@
                     </div> -->
                     <div class="align-items-center index-carousel d-flex row px-0">
                         <div class="slide">
-                            <a href="playtime.html" class="big-red">
+                            <a href="seixal_terno.html" class="big-red">
                                 <div class="d-flex flex-column align-items-center">
                                     <div class="titulo-container d-flex align-items-end">
-                                        <p class="titulo mb-0">Playtime</p>
+                                        <p class="titulo mb-0">Seixal Terno</p>
                                     </div>
                                     <div class="tags">
-                                        <p>music | video | experiment</p>
+                                        <p>design</p>
                                     </div>
                                 </div>
                             </a>
@@ -179,18 +179,20 @@
                                     <div class="tags">
                                         <p>web design | design | content creation</p>
                                     </div>
-                                </div>                        </a>
+                                </div>                        
+                            </a>
                         </div>
                         <div class="slide">
-                            <a href="cereais.html" class="big-blue no-style">
+                            <a href="sel.html" class="big-blue no-style">
                                 <div class="d-flex flex-column align-items-center">
                                     <div class="titulo-container d-flex align-items-end">
-                                        <p class="titulo mb-0">Cereais</p>
+                                        <p class="titulo mb-0">Sinais em Linha</p>
                                     </div>
                                     <div class="tags">
-                                        <p>music | design | content creation</p>
+                                        <p>design</p>
                                     </div>
-                                </div>                        </a>
+                                </div>                        
+                            </a>
                         </div>
                     </div>
                 <!-- </div> -->
@@ -221,7 +223,7 @@
                     <a class="no-style ajuste" target="_blank" href="https://www.instagram.com/bonanca.rgb/">Instagram</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center borders">
-                    <a class="no-style ajuste" target="_blank" href="https://bonanca.bandcamp.com/">Bandcamp</a>
+                    <a class="no-style ajuste" target="_blank" href="https://www.linkedin.com/in/ricardo-barroso-312aa0250/">LinkedIn</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center">
                     <a class="no-style ajuste" target="_blank" href="https://www.behance.net/ricardobarroso3">Behance</a>
