--- a/medusa.html
+++ b/medusa.html
@@ -148,20 +148,9 @@
     <main class="a-project blue-element medusa">
         <div class="container-fluid">
             <div class="row show-large">
-                <div class="offset-1 col-4 info">
-                    <div class="d-flex flex-column copy">
+                <div class="offset-1 col-4 info too-much-text d-flex align-items-center">
+                    <div class="copy">
                         <p>Photography, posters and collages for <u class="under">Medusa</u>, a Lisbon colective mainly focused on experimental music.</p>
-                    </div>
-                </div>
-                <div class="offset-1 col-4 container-fluid other-project">
-                    <div class="row">
-                        <div class="col-3 justify-content-end d-flex p-0">
-                            <a class="no-style" href="cereais.html"><</a>
-                        </div>
-                        <div class="col-6 d-flex justify-content-center">more projects</div>
-                        <div class="col-3 justify-content-start d-flex p-0">
-                            <a class="no-style" href="anas.html">></a>
-                        </div>
                     </div>
                 </div>
                 <div class="line col-1"></div>
@@ -186,17 +175,26 @@
                         </div>
                     </div>
                     <div class="dot-container" style="z-index: 10000;"></div>
-                </div>    
+                </div>  
+                <div class="col-6 other-project justify-content-around d-flex">
+                    <div class="p-0">
+                        <a class="no-style" href="cereais.html"><</a>
+                    </div>
+                    <div class="justify-content-center">more projects</div>
+                    <div class="p-0">
+                        <!-- <a class="no-style" href="aniversario_atomico.html">></a> -->
+                    </div>
+                </div>
             </div>
             <div class="row show-small">
-                <div class="col-12 container-fluid other-project">
+                <div class="col-12 container-fluid other-project py-1">
                     <div class="row">
                         <div class="col-3 col-sm-4 justify-content-center d-flex p-0">
                             <a class="no-style ajuste fino" href="cereais.html"><</a>
                         </div>
                         <div class="col-6 col-sm-4 d-flex justify-content-center ajuste">more projects</div>
                         <div class="col-3 col-sm-4 justify-content-center d-flex p-0 ajuste fino">
-                            <a class="no-style" href="anas.html">></a>
+                            <!-- <a class="no-style" href="anas.html">></a> -->
                         </div>
                     </div>
                 </div>
@@ -247,7 +245,7 @@
                     <a class="no-style ajuste" target="_blank" href="https://www.instagram.com/bonanca.rgb/">Instagram</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center borders">
-                    <a class="no-style ajuste" target="_blank" href="https://bonanca.bandcamp.com/">Bandcamp</a>
+                    <a class="no-style ajuste" target="_blank" href="https://www.linkedin.com/in/ricardo-barroso-312aa0250/">LinkedIn</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center">
                     <a class="no-style ajuste" target="_blank" href="https://www.behance.net/ricardobarroso3">Behance</a>
