--- a/aniversario_punch.html
+++ b/aniversario_punch.html
@@ -145,17 +145,17 @@
             </div>
         </div>
     </header>
-    <main class="a-project red-element aniversario_punch">
+    <main class="a-project green-element aniversario_punch">
         <div class="container-fluid">
             <div class="row show-large">
-                <div class="offset-1 col-4 info">
-                    <div class="d-flex flex-column copy">
+                <div class="offset-1 col-4 info too-much-text d-flex align-items-center">
+                    <div class="copy">
                         <p>Visual identity for the celebration of <u class="under"> Punch Magazine's </u> 13th birthday. Design, posters and videos 
                             developed around the photos taken of a tuna can.
                         </p>
                     </div>
                 </div>
-                <div class="offset-1 col-4 container-fluid other-project">
+                <!-- <div class="offset-1 col-4 container-fluid other-project">
                     <div class="row">
                         <div class="col-3 justify-content-end d-flex p-0">
                             <a class="no-style" href="eter_ines_apenas.html"><</a>
@@ -165,7 +165,7 @@
                             <a class="no-style" href="aniversario_atomico.html">></a>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="line col-1"></div>
                 <div class="col-6 d-flex px-5">
                     <div class="container-fluid project-carousel-container">
@@ -194,9 +194,18 @@
                     </div>
                     <!-- <div class="dot-container" style="z-index: 10000;"></div> -->
                 </div>    
+                <div class="col-6 other-project justify-content-around d-flex">
+                    <div class="p-0">
+                        <a class="no-style" href="eter_ines_apenas.html"><</a>
+                    </div>
+                    <div class="justify-content-center">more projects</div>
+                    <div class="p-0">
+                        <a class="no-style" href="aniversario_atomico.html">></a>
+                    </div>
+                </div>
             </div>
             <div class="row show-small">
-                <div class="col-12 container-fluid other-project">
+                <div class="col-12 container-fluid other-project py-1">
                     <div class="row">
                         <div class="col-3 col-sm-4 justify-content-center d-flex p-0">
                             <a class="no-style ajuste fino" href="eter_ines_apenas.html"><</a>
@@ -261,7 +270,7 @@
                     <a class="no-style ajuste" target="_blank" href="https://www.instagram.com/bonanca.rgb/">Instagram</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center borders">
-                    <a class="no-style ajuste" target="_blank" href="https://bonanca.bandcamp.com/">Bandcamp</a>
+                    <a class="no-style ajuste" target="_blank" href="https://www.linkedin.com/in/ricardo-barroso-312aa0250/">LinkedIn</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center">
                     <a class="no-style ajuste" target="_blank" href="https://www.behance.net/ricardobarroso3">Behance</a>
