--- a/ara.html
+++ b/ara.html
@@ -237,7 +237,7 @@
                     <a class="no-style ajuste" target="_blank" href="https://www.instagram.com/bonanca.rgb/">Instagram</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center borders">
-                    <a class="no-style ajuste" target="_blank" href="https://bonanca.bandcamp.com/">Bandcamp</a>
+                    <a class="no-style ajuste" target="_blank" href="https://www.linkedin.com/in/ricardo-barroso-312aa0250/">LinkedIn</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center">
                     <a class="no-style ajuste" target="_blank" href="https://www.behance.net/ricardobarroso3">Behance</a>
