--- a/cereais.html
+++ b/cereais.html
@@ -141,27 +141,16 @@
             </div>
         </div>
     </header>
-    <main class="a-project red-element cereais">
+    <main class="a-project green-element cereais">
         <div class="container-fluid">
             <div class="row show-large">
-                <div class="offset-1 col-4 info">
-                    <div class="d-flex flex-column copy">
+                <div class="offset-1 col-4 info too-much-text d-flex align-items-center">
+                    <div class="copy">
                         <p>Writing of the two songs that are part of the double single <u class="under">Cereais</u>, as
                             well as the cover art and social media campaign.
                         <p>Released on all platforms on the 24th of May 2024.</p>
                         <div>
-                            <a class="button-skin" href="https://open.spotify.com/intl-pt/album/6s2mF1xrmKrsiemJ3j6XEp?si=opMvbrMhR1eOlFlLq_iGwQ"><u class="under">Give them a listen</u></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="offset-1 col-4 container-fluid other-project">
-                    <div class="row">
-                        <div class="col-3 justify-content-end d-flex p-0">
-                            <a class="no-style" href="roterdao.html"><</a>
-                        </div>
-                        <div class="col-6 d-flex justify-content-center">more projects</div>
-                        <div class="col-3 justify-content-start d-flex p-0">
-                            <a class="no-style" href="medusa.html">></a>
+                            <a class="no-style ajuste" href="https://open.spotify.com/intl-pt/album/6s2mF1xrmKrsiemJ3j6XEp?si=opMvbrMhR1eOlFlLq_iGwQ" target="_blank"><u class="under">Give them a listen</u><img class="h-link" src="images/hyperlink.svg"></a>
                         </div>
                     </div>
                 </div>
@@ -184,10 +173,19 @@
                         </div>
                     </div>
                     <div class="dot-container" style="z-index: 10000;"></div>
-                </div>    
+                </div> 
+                <div class="col-6 other-project justify-content-around d-flex">
+                    <div class="p-0">
+                        <a class="no-style" href="roterdao.html"><</a>
+                    </div>
+                    <div class="justify-content-center">more projects</div>
+                    <div class="p-0">
+                        <a class="no-style" href="medusa.html">></a>
+                    </div>
+                </div>   
             </div>
             <div class="row show-small">
-                <div class="col-12 container-fluid other-project">
+                <div class="col-12 container-fluid other-project py-1">
                     <div class="row">
                         <div class="col-3 col-sm-4 justify-content-center d-flex p-0">
                             <a class="no-style ajuste fino" href="roterdao.html"><</a>
@@ -247,7 +245,7 @@
                     <a class="no-style ajuste" target="_blank" href="https://www.instagram.com/bonanca.rgb/">Instagram</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center borders">
-                    <a class="no-style ajuste" target="_blank" href="https://bonanca.bandcamp.com/">Bandcamp</a>
+                    <a class="no-style ajuste" target="_blank" href="https://www.linkedin.com/in/ricardo-barroso-312aa0250/">LinkedIn</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center">
                     <a class="no-style ajuste" target="_blank" href="https://www.behance.net/ricardobarroso3">Behance</a>
