--- a/roterdao.html
+++ b/roterdao.html
@@ -145,30 +145,20 @@
             </div>
         </div>
     </header>
-    <main class="a-project green-element roterdao">
+    <main class="a-project red-element roterdao">
         <div class="container-fluid">
             <div class="row show-large">
-                <div class="offset-1 col-4 info">
-                    <div class="d-flex flex-column copy">
+                <div class="offset-1 col-4 info too-much-text d-flex align-items-center">
+                    <div class="copy">
                         <p>Creation of new identity and graphic system, including a custom
                              typography based on the reimagining of <u class="under">Roterdão</u>'s original logo.
                             Development as well of a website from scratch.</p>
                         <div>
-                            <a class="button-skin" href="https://bonancargb.github.io/roterdao_arquivo/"><u class="under">Check website</u></a>
+                            <a class="no-style ajuste" href="https://bonancargb.github.io/roterdao_arquivo/" target="_blank"><u class="under">Check website</u><img class="h-link" src="images/hyperlink.svg"></a>
                         </div>
                     </div>
                 </div>
-                <div class="offset-1 col-4 container-fluid other-project">
-                    <div class="row">
-                        <div class="col-3 justify-content-end d-flex p-0">
-                            <a class="no-style" href="aniversario_atomico.html"><</a>
-                        </div>
-                        <div class="col-6 d-flex justify-content-center">more projects</div>
-                        <div class="col-3 justify-content-start d-flex p-0">
-                            <a class="no-style" href="cereais.html">></a>
-                        </div>
-                    </div>
-                </div>
+                
                 <div class="line col-1"></div>
                 <div class="col-6 d-flex px-5">
                     <div class="container-fluid project-carousel-container">
@@ -200,10 +190,19 @@
                         </div>
                     </div>
                     <div class="dot-container" style="z-index: 10000;"></div>
-                </div>    
+                </div>   
+                <div class="col-6 other-project justify-content-around d-flex">
+                    <div class="p-0">
+                        <a class="no-style" href="aniversario_atomico.html"><</a>
+                    </div>
+                    <div class="justify-content-center">more projects</div>
+                    <div class="p-0">
+                        <a class="no-style" href="cereais.html">></a>
+                    </div>
+                </div>  
             </div>
             <div class="row show-small">
-                <div class="col-12 container-fluid other-project">
+                <div class="col-12 container-fluid other-project py-1">
                     <div class="row">
                         <div class="col-3 col-sm-4 justify-content-center d-flex p-0">
                             <a class="no-style ajuste fino" href="aniversario_atomico.html"><</a>
@@ -220,7 +219,7 @@
                              typography based on the reimagining of <u class="under">Roterdão</u>'s original logo.
                             Development as well of a website from scratch.</p>
                         <div>
-                            <a class="button-skin" href="https://bonancargb.github.io/roterdao_arquivo/"><u class="under">Check website</u></a>
+                            <a class="no-style ajuste" href="https://bonancargb.github.io/roterdao_arquivo/" target="_blank"><u class="under">Check website</u><img class="h-link" src="images/hyperlink.svg"></a>
                         </div>
                     </div>
                 </div>
@@ -275,7 +274,7 @@
                     <a class="no-style ajuste" target="_blank" href="https://www.instagram.com/bonanca.rgb/">Instagram</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center borders">
-                    <a class="no-style ajuste" target="_blank" href="https://bonanca.bandcamp.com/">Bandcamp</a>
+                    <a class="no-style ajuste" target="_blank" href="https://www.linkedin.com/in/ricardo-barroso-312aa0250/">LinkedIn</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center">
                     <a class="no-style ajuste" target="_blank" href="https://www.behance.net/ricardobarroso3">Behance</a>
