--- a/aniversario_atomico.html
+++ b/aniversario_atomico.html
@@ -151,7 +151,7 @@
                 <div class="offset-1 col-4 info too-much-text d-flex align-items-center">
                     <div class="copy">
                         <p>Visual identity for the celebration of <u class="under"> ATOMS MGMT's </u> first anniversary. The identity was
-                            inspired in appropriation of the Periodic Table of Elements.
+                            inspired in the recontextualization of the Periodic Table of Elements.
                         </p>
                     </div>
                 </div>
@@ -200,7 +200,7 @@
                 <div class="offset-1 col-10 offset-md-2 col-md-8 d-flex flex-column priority info copy">
                     <div class="d-flex flex-column">
                         <p>Visual identity for the celebration of <u class="under"> ATOMS MGMT's </u> first anniversary. The identity was
-                            inspired in appropriation of the Periodic Table of Elements.
+                            inspired in the recontextualization of the Periodic Table of Elements.
                         </p>
                     </div>
                 </div>
