--- a/contact_me.html
+++ b/contact_me.html
@@ -148,8 +148,8 @@
     <main class="contact_me">
         <div class="container-fluid h-100">
             <div class="row show-large">
-                <div class="offset-1 col-4 info">
-                    <div class="d-flex flex-column">
+                <div class="offset-1 col-4 info d-flex align-items-center">
+                    <div class="">
                         <p>Let's work <u class="under">together</u>.</p>
                     </div>
                 </div>
@@ -167,7 +167,7 @@
                     <div class="d-flex flex-column justify-content-end">
                         <p><u class="under">E-mail</u>:<br> ricardoriguba@gmail.com</p>
                         <p><u class="under">Phone</u>:<br> +351 969070134</p>
-                        <p><u class="under">Instagram</u>:<br> bonanca.rgb</p>
+                        <p><u class="under">Instagram</u>:<br> @bonanca.rgb</p>
                         <p class="pt-5">Let's work <u class="under">together</u>.</p>
                     </div>                
                 </div>
