--- a/ineur.html
+++ b/ineur.html
@@ -148,7 +148,7 @@
     <main class="a-project green-element ineur">
         <div class="container-fluid">
             <div class="row show-large">
-                <div class="offset-1 col-4 info too-much-text">
+                <div class="offset-1 col-4 info too-much-text d-flex align-items-center">
                     <div class="copy">
                         <p>As a classical guitarist <u class="under">Marta Fonseca</u> knows the ins and outs of classical music concerts and recitals. For that reason,
                             for her new tour there was an urge to break the mold, going against what one conventionally associates with the genre.</p>
