--- a/seixal_terno.html
+++ b/seixal_terno.html
@@ -42,10 +42,10 @@
                 </a>
                 <div class="container-carousel col-4">
                     <div class="carousel-header">
-                        <p>Graphic language and elements for Marta Fonseca's tour <u class="under">Isto não é um Recital</u>.</p>
+                        <p>New image for the festival <u class="under">Seixal Terno</u> in collaboration with André Amado.</p>
                     </div>
                     <div class="carousel-header-still">
-                        <p>Graphic language and elements for Marta Fonseca's tour <u class="under">Isto não é um Recital</u>.</p>
+                        <p>New image for the festival <u class="under">Seixal Terno</u> in collaboration with André Amado.</p>
                     </div>
                 </div>
                 <div class="menu col-4">
@@ -84,7 +84,7 @@
                 </a>
                 <div class="container-carousel col-4 px-0 expand">
                     <div class="carousel-header expand">
-                        <p>Graphic language and elements for Marta Fonseca's tour <u class="under">Isto não é um Recital</u>.</p>
+                        <p>New image for the festival <u class="under">Seixal Terno</u> in collaboration with André Amado.</p>
                     </div>
                 </div>
                 <button class="menu col-4 btn-no-style expand">
@@ -148,7 +148,7 @@
     <main class="a-project blue-element seixal_terno">
         <div class="container-fluid">
             <div class="row show-large">
-                <div class="offset-1 col-4 info too-much-text">
+                <div class="offset-1 col-4 info too-much-text d-flex align-items-center">
                     <div class="copy">
                         <p><u class="under">Seixal Terno</u> is an alternative music festival that has been taking place in Seixal for the last 3 years. For this
                             year's edition <u class="under">bué clichê</u> - mine and <u class="under">André Amado</u>'s creative collective - was invited to develop a new 
@@ -218,10 +218,13 @@
                 </div>
                 <div class="offset-1 col-10 offset-md-2 col-md-8 d-flex flex-column priority info copy">
                     <div class="d-flex flex-column">
-                        <p>As a classical guitarist <u class="under">Marta Fonseca</u> knows the ins and outs of classical music concerts and recitals. For that reason,
-                            for her new tour there was an urge to break the mold, going against what one conventionally associates with the genre.</p>
-                        <p>Asked to develop an image that would reflect that <u class="under">rebelious</u> act and could yet retain some <u class="under">formality</u>, I developed posters
-                            for the tour and am currently working on other elements such as the programme sheet.
+                        <p><u class="under">Seixal Terno</u> is an alternative music festival that has been taking place in Seixal for the last 3 years. For this
+                            year's edition <u class="under">bué clichê</u> - mine and <u class="under">André Amado</u>'s creative collective - was invited to develop a new 
+                            visual language.
+                        </p>
+                        <p>Taking inspiration from elements previously featured in other editions of the festival through a new approach, we went
+                            for a <u class="under">warm</u> color palette, combining <u class="under">analog</u> textures with a more <u class="under">modern</u> 
+                            typography, trying to reflect the <u class="under">inclusive</u> nature of the festival, where music aficionados and casual listeners alike can have a great time.
                         </p>
                         <!-- <div>
                             <a class="button-skin" href="https://bonancargb.github.io/roterdao_arquivo/"><u class="under">Check website</u></a>
@@ -256,7 +259,7 @@
             <div class="row">
                 <div class="container-carousel col-12 px-0">
                     <div class="carousel-header expand">
-                        <p>Graphic language and elements for Marta Fonseca's tour <u class="under">Isto não é um Recital</u>.</p>
+                        <p>New image for the festival <u class="under">Seixal Terno</u> in collaboration with André Amado.</p>
                     </div>
                 </div>
             </div>
