--- a/sel.html
+++ b/sel.html
@@ -148,7 +148,7 @@
     <main class="a-project red-element sel">
         <div class="container-fluid">
             <div class="row show-large">
-                <div class="offset-1 col-4 info too-much-text">
+                <div class="offset-1 col-4 info too-much-text d-flex align-items-center">
                     <div class="copy">
                         <p>An open ended approach to <u class="under">Sinais em Linha</u>'s identity, that reflects both its 
                             academic backbone and the innovative and expansive voice it will bring to the table with this new iteration.</p>
