--- a/ineur.html
+++ b/ineur.html
@@ -176,13 +176,13 @@
                     <div class="container-fluid project-carousel-container">
                         <div class="project-carousel d-flex row px-0">
                             <div class="slide px-3">
-                                <img src="images/ineur_main.png" class="img-fluid">
+                                <img src="images/ineur_main.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/ineur_leiria.png" class="img-fluid">
+                                <img src="images/ineur_leiria.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/ineur_lx_good.png" class="img-fluid">
+                                <img src="images/ineur_lx_good.jpg" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -227,13 +227,13 @@
                     <div class="container-fluid project-carousel-container">
                         <div class="project-carousel d-flex justify-content-center row px-0">
                             <div class="slide px-3">
-                                <img src="images/ineur_main.png" class="img-fluid">
+                                <img src="images/ineur_main.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/ineur_leiria.png" class="img-fluid">
+                                <img src="images/ineur_leiria.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/ineur_lx_good.png" class="img-fluid">
+                                <img src="images/ineur_lx_good.jpg" class="img-fluid">
                             </div>
                         </div>
                     </div>
