--- a/sel.html
+++ b/sel.html
@@ -185,19 +185,19 @@
                                 </iframe>                            
                             </div>
                             <div class="slide px-3">
-                                <img src="images/sel_logo_simples.png" class="img-fluid">
+                                <img src="images/sel_logo_simples.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/sel_sinais.png" class="img-fluid">
+                                <img src="images/sel_sinais.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/sel_em.png" class="img-fluid">
+                                <img src="images/sel_em.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/sel_linha.png" class="img-fluid">
+                                <img src="images/sel_linha.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/sel_agora_tambem.png" class="img-fluid">
+                                <img src="images/sel_agora_tambem.jpg" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -251,19 +251,19 @@
                                 </iframe>                            
                             </div>
                             <div class="slide px-3">
-                                <img src="images/sel_logo_simples.png" class="img-fluid">
+                                <img src="images/sel_logo_simples.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/sel_sinais.png" class="img-fluid">
+                                <img src="images/sel_sinais.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/sel_em.png" class="img-fluid">
+                                <img src="images/sel_em.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/sel_linha.png" class="img-fluid">
+                                <img src="images/sel_linha.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/sel_agora_tambem.png" class="img-fluid">
+                                <img src="images/sel_agora_tambem.jpg" class="img-fluid">
                             </div>
                         </div>
                     </div>
