--- a/seixal_terno.html
+++ b/seixal_terno.html
@@ -179,16 +179,16 @@
                     <div class="container-fluid project-carousel-container">
                         <div class="project-carousel d-flex row px-0">
                             <div class="slide px-3">
-                                <video src="images/seixal_maos_movel.mp4" autoplay loop class="img-fluid">
+                                <video src="images/seixal_maos_movel.mp4" muted autoplay loop class="img-fluid">
                             </div>
                             <div class="slide px-3">
                                 <img src="images/seixal_poster_mockup_insta.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <video src="images/seixal_movel_vermelho.mp4" autoplay loop class="img-fluid">
+                                <video src="images/seixal_movel_vermelho.mp4" muted autoplay loop class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <video src="images/seixal_pc_maos.mp4" autoplay loop class="img-fluid">
+                                <video src="images/seixal_pc_maos.mp4" muted autoplay loop class="img-fluid">
                             </div>
                         </div>
                     </div>
