final corrections, for now

--- a/ineur.html
+++ b/ineur.html
@@ -184,6 +184,15 @@
                             <div class="slide px-3">
                                 <img src="images/ineur_lx_good.jpg" class="img-fluid">
                             </div>
+                            <div class="slide px-3">
+                                <img src="images/ineur_prog_frente.jpg" class="img-fluid">
+                            </div>
+                            <div class="slide px-3">
+                                <img src="images/ineur_prog_dentro.jpg" class="img-fluid">
+                            </div>
+                            <div class="slide px-3">
+                                <img src="images/ineur_prog_tras.jpg" class="img-fluid">
+                            </div>
                         </div>
                     </div>
                     <div class="dot-container" style="z-index: 10000;"></div>
@@ -234,6 +243,15 @@
                             </div>
                             <div class="slide px-3">
                                 <img src="images/ineur_lx_good.jpg" class="img-fluid">
+                            </div>
+                            <div class="slide px-3">
+                                <img src="images/ineur_prog_frente.jpg" class="img-fluid">
+                            </div>
+                            <div class="slide px-3">
+                                <img src="images/ineur_prog_dentro.jpg" class="img-fluid">
+                            </div>
+                            <div class="slide px-3">
+                                <img src="images/ineur_prog_tras.jpg" class="img-fluid">
                             </div>
                         </div>
                     </div>
