--- a/previous_work.html
+++ b/previous_work.html
@@ -160,74 +160,76 @@
                     <p class="mb-0">Show All</p> 
                 </button>
                 <ul class="dropdown-menu py-0" aria-labelledby="dropdownMenuOffset">
-                    <li><button class="dropdown-item botao-preto tag-1">Web Design</button></li>
-                    <li><button class="dropdown-item botao-preto tag-2">Design</button></li>
-                    <li><button class="dropdown-item botao-preto tag-3">Music</button></li>
-                    <li><button class="dropdown-item botao-preto tag-4">Copywriting</button></li>
-                    <li><button class="dropdown-item botao-preto tag-5">Experiment</button></li>
-                    <li><button class="dropdown-item botao-preto tag-6 todos invisivel">Show All</button></li>
+                    <li><button class="dropdown-item botao-preto tag-1">Web</button></li>
+                    <li><button class="dropdown-item botao-preto tag-2">Brand</button></li>
+                    <li><button class="dropdown-item botao-preto tag-3">Editorial</button></li>
+                    <li><button class="dropdown-item botao-preto tag-4">Packaging</button></li>
+                    <li><button class="dropdown-item botao-preto tag-5">Social Media</button></li>
+                    <li><button class="dropdown-item botao-preto tag-6">Copywriting</button></li>
+                    <li><button class="dropdown-item botao-preto tag-7">Photography</button></li>
+                    <li><button class="dropdown-item botao-preto tag-8 todos invisivel">Show All</button></li>
                 </ul>
             </div>
         </section>
         <section class="container-fluid py-4 px-0 projects show-large">
 
-            <a href="sel.html" class="row design py-4 d-flex align-items-center sel">
+            <a href="sel.html" class="row brand social_media py-4 d-flex align-items-center sel">
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Sinais em Linha</b></p>
                 </div>
                 <div class="col-4 red p-0"><img src="images/sel_logo_simples.png"></div>
                 <div class="col-4 text-start">
-                    <p>Design</p>
+                    <p>Brand, Social Media</p>
                 </div>
             </a>
 
-            <a href="ineur.html" class="row design py-4 d-flex align-items-center ineur">
+            <a href="ineur.html" class="row brand editorial social_media py-4 d-flex align-items-center ineur">
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Isto não é um Recital</b></p>
                 </div>
                 <div class="col-4 green p-0"><img src="images/ineur_main.png"></div>
                 <div class="col-4 text-start">
-                    <p>Design</p>
+                    <p>Brand, Editorial, Social Media</p>
                 </div>
             </a>
 
-            <a href="seixal_terno.html" class="row design py-4 d-flex align-items-center seixal_terno">
+            <a href="seixal_terno.html" class="row brand social_media py-4 d-flex align-items-center seixal_terno">
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Seixal Terno</b></p>
                 </div>
                 <div class="col-4 blue p-0"><img src="images/seixal_poster_mockup_insta.png"></div>
                 <div class="col-4 text-start">
-                    <p>Design</p>
+                    <p>Brand, Social Media</p>
                 </div>
             </a>
             
-            <a href="eter_ines_apenas.html" class="row design py-4 d-flex align-items-center eter">
+            <a href="eter_ines_apenas.html" class="row social_media packaging py-4 d-flex align-items-center eter">
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Éter, Inês Apenas</b></p>
                 </div>
                 <div class="col-4 red p-0"><img src="images/vinil_mockup_ines_apenas.jpg"></div>
                 <div class="col-4 text-start">
-                    <p>Design</p>
+                    <p>Packaging, Social Media</p>
                 </div>
             </a>
 
-            <a href="aniversario_punch.html" class="row design py-4 d-flex align-items-center aniversario_punch">
+            <a href="aniversario_punch.html" class="row social_media py-4 d-flex align-items-center aniversario_punch">
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>13º Aniversário Punch</b></p>
                 </div>
                 <div class="col-4 green p-0"><img src="images/lata_punch_transparente.png"></div>
                 <div class="col-4 text-start">
-                    <p>Design</p>
+                    <p>Social Media</p>
                 </div>
             </a>
 
-            <a href="aniversario_atomico.html" class="row design py-4 d-flex align-items-center aniversario_atomico">
+            <a href="aniversario_atomico.html" class="row social_media py-4 d-flex align-items-center aniversario_atomico">
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Aniversário Atómico</b></p>
                 </div>
                 <div class="col-4 blue p-0"><img src="images/cartaz_a3_aniversario_atomico_FINAL.png"></div>
                 <div class="col-4 text-start">
-                    <p>Design</p>
+                    <p>Social Media</p>
                 </div>
             </a>
             
@@ -241,23 +243,23 @@
                 </div>
             </a> -->
 
-            <a href="roterdao.html" class="row web-design design py-4 roterdao">
+            <a href="roterdao.html" class="row web social_media brand copywriting py-4 roterdao">
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Roterdão Club</b></p>
                 </div>
                 <div class="col-4 red p-0"><img src="images/logo_roterdao.svg"></div>
                 <div class="col-4 text-start">
-                    <p>Web Design, Design</p>
+                    <p>Web, Brand, Social Media, Copywriting</p>
                 </div>
             </a>
 
-            <a href="cereais.html" class="row design music copywriting py-4 cereais">
+            <a href="cereais.html" class="row social_media brand copywriting py-4 cereais">
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Cereais, Bonança</b></p>
                 </div>
                 <div class="col-4 green p-0"><img src="images/cereais.jpg"></div>
                 <div class="col-4 text-start">
-                    <p>Design, Music, Copywriting</p>
+                    <p>Brand, Social Media, Copywriting</p>
                 </div>
             </a>
 
@@ -281,13 +283,13 @@
                 </div>
             </a> -->
 
-            <a href="medusa.html" class="row photography design copywriting py-4 medusa">
+            <a href="medusa.html" class="row social_media photography copywriting py-4 medusa">
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Medusa coletivo</b></p>
                 </div>
                 <div class="col-4 blue p-0"><img src="images/medusa.jpg"></div>
                 <div class="col-4 text-start">
-                    <p>Photography, Design, Copywriting</p>
+                    <p>Social Media, Copywriting, Photography</p>
                 </div>
             </a>
 
@@ -320,62 +322,62 @@
             <div class="row">
                 <div class="hor-line"></div>
 
-                <a href="sel.html" class="flex-column design py-4 d-flex align-items-center sel">
+                <a href="sel.html" class="flex-column brand social_media py-4 d-flex align-items-center sel">
                     <div class=" d-flex">
                         <p><b>Sinais em Linha</b></p>
                     </div>
                     <div class=" text-start">
-                        <p>Design</p>
+                        <p>Brand, Social Media</p>
                     </div>
                 </a>
                 <div class="hor-line design"></div>
 
-                <a href="ineur.html" class="flex-column design py-4 d-flex align-items-center ineur">
+                <a href="ineur.html" class="flex-column brand editorial social_media py-4 d-flex align-items-center ineur">
                     <div class=" d-flex">
                         <p><b>Isto não é um Recital</b></p>
                     </div>
                     <div class=" text-start">
-                        <p>Design</p>
+                        <p>Brand, Editorial, Social Media</p>
                     </div>
                 </a>
                 <div class="hor-line design"></div>
 
-                <a href="seixal_terno.html" class="flex-column design py-4 d-flex align-items-center seixal_terno">
+                <a href="seixal_terno.html" class="flex-column brand social_media py-4 d-flex align-items-center seixal_terno">
                     <div class=" d-flex">
                         <p><b>Seixal Terno</b></p>
                     </div>
                     <div class=" text-start">
-                        <p>Design</p>
+                        <p>Brand, Social Media</p>
                     </div>
                 </a>
                 <div class="hor-line design"></div>
 
-                <a href="eter_ines_apenas.html" class="flex-column design py-4 d-flex align-items-center eter">
+                <a href="eter_ines_apenas.html" class="flex-column social_media packaging py-4 d-flex align-items-center eter">
                     <div class=" d-flex">
                         <p><b>Éter, Inês Apenas</b></p>
                     </div>
                     <div class=" text-start">
-                        <p>Design</p>
+                        <p>Social Media, Packaging</p>
                     </div>
                 </a>
                 <div class="hor-line design"></div>
 
-                <a href="aniversario_punch.html" class="flex-column design py-4 d-flex align-items-center aniversario_punch">
+                <a href="aniversario_punch.html" class="flex-column social_media py-4 d-flex align-items-center aniversario_punch">
                     <div class=" d-flex">
                         <p><b>13º Aniversário Punch</b></p>
                     </div>
                     <div class=" text-start">
-                        <p>Design</p>
+                        <p>Social Media</p>
                     </div>
                 </a>
                 <div class="hor-line design"></div>
 
-                <a href="aniversario_atomico.html" class="flex-column design py-4 d-flex align-items-center aniversario_atomico">
+                <a href="aniversario_atomico.html" class="flex-column social_media py-4 d-flex align-items-center aniversario_atomico">
                     <div class=" d-flex">
                         <p><b>Aniversário Atómico</b></p>
                     </div>
                     <div class=" text-start">
-                        <p>Design</p>
+                        <p>Social Media</p>
                     </div>
                 </a>
                 <div class="hor-line design"></div>
@@ -391,23 +393,23 @@
                 <div class="hor-line design"></div> -->
 
 
-                <a href="roterdao.html" class="d-flex align-items-center flex-column web-design design py-4 roterdao">
+                <a href="roterdao.html" class="d-flex web social_media brand copywriting align-items-center flex-column py-4 roterdao">
                     <div class="d-flex">
                         <p><b>Roterdão Club</b></p>
                     </div>
                     <div class="text-start">
-                        <p>Web Design, Design</p>
+                        <p>Web, Social Media, Brand, Copywriting</p>
                     </div>
                 </a>
                 <div class="hor-line web-design design"></div>
 
 
-                <a href="cereais.html" class="d-flex align-items-center flex-column design music copywriting py-4 cereais">
+                <a href="cereais.html" class="d-flex social_media brand copywriting align-items-center flex-column py-4 cereais">
                     <div class=" d-flex">
                         <p><b>Cereais, Bonança</b></p>
                     </div>
                     <div class=" text-start">
-                        <p>Design, Music, Copywriting</p>
+                        <p>Social Media, Brand, Copywriting</p>
                     </div>
                 </a>
                 <div class="hor-line design music copywriting"></div>
@@ -435,17 +437,17 @@
                 <div class="hor-line design"></div> -->
 
 
-                <a href="medusa.html" class="d-flex align-items-center flex-column photography design copywriting py-4 medusa">
+                <a href="medusa.html" class="d-flex align-items-center flex-column social_media photography copywriting py-4 medusa">
                     <div class=" d-flex">
                         <p><b>Medusa coletivo</b></p>
                     </div>
                     <div class=" text-start">
-                        <p>Photography, Design, Copywriting</p>
+                        <p>Social Media, Copywriting, Photography</p>
                     </div>
                 </a>
                 <div class="hor-line photography design copywriting"></div>
 
-                <a href="anas.html" class="d-flex align-items-center flex-column music py-4 anas">
+                <!-- <a href="anas.html" class="d-flex align-items-center flex-column music py-4 anas">
                     <div class=" d-flex">
                         <p><b>Hannah, Anna, Ana</b></p>
                     </div>
@@ -464,7 +466,7 @@
                         <p>Music, Video, Copywriting, Experiment</p>
                     </div>
                 </a>
-                <div class="hor-line music video copywriting experiment"></div>
+                <div class="hor-line music video copywriting experiment"></div> -->
 
             </div>
 
