--- a/contact_me.html
+++ b/contact_me.html
@@ -147,7 +147,7 @@
     </header>
     <main class="contact_me">
         <div class="container-fluid h-100">
-            <div class="row show-large">
+            <div class="row show-large h-100">
                 <div class="offset-1 col-4 info d-flex align-items-center">
                     <div class="">
                         <p>Let's work <u class="under">together</u>.</p>
