--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                         <p>You might want to <br>check out:</p>
                     </div> -->
                     <div class="align-items-center index-carousel d-flex row px-0">
-                        <div class="slide">
+                        <div class="slide fade-in">
                             <a href="seixal_terno.html" class="big-red">
                                 <div class="d-flex flex-column align-items-center">
                                     <div class="titulo-container d-flex align-items-end">
@@ -170,7 +170,7 @@
                                 </div>
                             </a>
                         </div>
-                        <div class="slide">
+                        <div class="slide fade-in">
                             <a href="roterdao.html" class="big-green no-style">
                                 <div class="d-flex flex-column align-items-center">
                                     <div class="titulo-container d-flex align-items-end">
@@ -182,7 +182,7 @@
                                 </div>                        
                             </a>
                         </div>
-                        <div class="slide">
+                        <div class="slide fade-in">
                             <a href="sel.html" class="big-blue no-style">
                                 <div class="d-flex flex-column align-items-center">
                                     <div class="titulo-container d-flex align-items-end">
