--- a/previous_work.html
+++ b/previous_work.html
@@ -177,8 +177,8 @@
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Sinais em Linha</b></p>
                 </div>
-                <div class="col-4 red p-0"><img src="images/sel_logo_simples.png"></div>
-                <div class="col-4 text-start">
+                <div class="red p-0"><img src="images/sel_logo_simples.png"></div>
+                <div class="offset-4 col-4 text-start">
                     <p>Brand, Social Media</p>
                 </div>
             </a>
@@ -187,8 +187,8 @@
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Isto não é um Recital</b></p>
                 </div>
-                <div class="col-4 green p-0"><img src="images/ineur_main.png"></div>
-                <div class="col-4 text-start">
+                <div class="green p-0"><img src="images/ineur_main.png"></div>
+                <div class="offset-4 col-4 text-start">
                     <p>Brand, Editorial, Social Media</p>
                 </div>
             </a>
@@ -197,8 +197,8 @@
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Seixal Terno</b></p>
                 </div>
-                <div class="col-4 blue p-0"><img src="images/seixal_poster_mockup_insta.png"></div>
-                <div class="col-4 text-start">
+                <div class="blue p-0"><img src="images/seixal_poster_mockup_insta.png"></div>
+                <div class="offset-4 col-4 text-start">
                     <p>Brand, Social Media</p>
                 </div>
             </a>
@@ -207,8 +207,8 @@
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Éter, Inês Apenas</b></p>
                 </div>
-                <div class="col-4 red p-0"><img src="images/vinil_mockup_ines_apenas.jpg"></div>
-                <div class="col-4 text-start">
+                <div class="red p-0"><img src="images/vinil_mockup_ines_apenas.jpg"></div>
+                <div class="offset-4 col-4 text-start">
                     <p>Packaging, Social Media</p>
                 </div>
             </a>
@@ -217,8 +217,8 @@
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>13º Aniversário Punch</b></p>
                 </div>
-                <div class="col-4 green p-0"><img src="images/lata_punch_transparente.png"></div>
-                <div class="col-4 text-start">
+                <div class="green p-0"><img src="images/lata_punch_transparente.png"></div>
+                <div class="offset-4 col-4 text-start">
                     <p>Social Media</p>
                 </div>
             </a>
@@ -227,8 +227,8 @@
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Aniversário Atómico</b></p>
                 </div>
-                <div class="col-4 blue p-0"><img src="images/cartaz_a3_aniversario_atomico_FINAL.png"></div>
-                <div class="col-4 text-start">
+                <div class="blue p-0"><img src="images/cartaz_a3_aniversario_atomico_FINAL.png"></div>
+                <div class="offset-4 col-4 text-start">
                     <p>Social Media</p>
                 </div>
             </a>
@@ -247,8 +247,8 @@
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Roterdão Club</b></p>
                 </div>
-                <div class="col-4 red p-0"><img src="images/logo_roterdao.svg"></div>
-                <div class="col-4 text-start">
+                <div class="red p-0"><img src="images/story_roterdao.jpg"></div>
+                <div class="offset-4 col-4 text-start">
                     <p>Web, Brand, Social Media, Copywriting</p>
                 </div>
             </a>
@@ -257,8 +257,8 @@
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Cereais, Bonança</b></p>
                 </div>
-                <div class="col-4 green p-0"><img src="images/cereais.jpg"></div>
-                <div class="col-4 text-start">
+                <div class="green p-0"><img src="images/cereais.jpg"></div>
+                <div class="offset-4 col-4 text-start">
                     <p>Brand, Social Media, Copywriting</p>
                 </div>
             </a>
@@ -287,8 +287,8 @@
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Medusa coletivo</b></p>
                 </div>
-                <div class="col-4 blue p-0"><img src="images/medusa.jpg"></div>
-                <div class="col-4 text-start">
+                <div class="blue p-0"><img src="images/medusa.jpg"></div>
+                <div class="offset-4 col-4 text-start">
                     <p>Social Media, Copywriting, Photography</p>
                 </div>
             </a>
